[tool.poetry]
name = "repltable"
version = "1.2.0"
description = "Table support for the replit database"
authors = ["terabyte. <terabyte@terabyteis.me>"]
readme = "README.md"
repository = "https://github.com/terabyte3/repltable"
keywords = ["replit", "database", "table", "nosql", "db", "datastore", "repl", "repl.it"]
classifiers = [
    "Topic :: Database",   
]
packages = [
    { include = "repltable" }
]

[tool.poetry.dependencies]
python = "^3.8"
urllib3 = "^1.26.9"
aiohttp = {version="^3.8.1", optional = true}
orjson = "^3.6.8"

[tool.poetry.extras]
async = ["aiohttp"]

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.7b0"
bandit = "^1.7.0"
mypy = "^0.910"
types-cachetools = "^4.2.2"
pytest-aio = "^1.3.2"
python-dotenv = "^0.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
