[tool.poetry]
name = "repltable"
version = "3.0.0"
description = "a better replit database for python"
authors = ["terabyte. <terabyte@terabyteis.me>"]
readme = "README.md"
repository = "https://github.com/terabyte3/repltable"
keywords = ["replit", "database", "table", "nosql", "db", "datastore", "repl", "repl.it", "replit-py"]
classifiers = [
    "Topic :: Database",   
]
packages = [
    { include = "repltable" }
]

[tool.poetry.dependencies]
python = "^3.8"
orjson = "^3.6.8"
urllib3 = "^1.26.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.7b0"
bandit = "^1.7.0"
mypy = "^0.910"
types-cachetools = "^4.2.2"
pytest-aio = "^1.3.2"
python-dotenv = "^0.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
