[project]
name = "repltable"
version = "4.0.0"
description = "a better replit database for python"
authors = [
    { name = "te", email = "thrzl@icloud.com" }
]
dependencies = [
    "httpx>=0.27.0",
]
readme = "README.md"
requires-python = ">= 3.8"
keywords = ["replit", "database", "table", "nosql", "db", "datastore", "repl", "repl.it", "replit-py"]
classifiers = [
    "Topic :: Database",   
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.4.1",
    "bandit>=1.7.8",
    "types-cachetools>=5.3.0.7",
    "python-dotenv>=1.0.1",
    "icecream>=2.1.3",
    "replit>=3.6.2",
    "pytest>=8.1.1",
    "pytest-asyncio>=0.23.6",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/repltable"]
